Fix graphBar overlap with history widget when all graphs are closed

--- a/src/mist/io/static/main.css
+++ b/src/mist/io/static/main.css
@@ -905,7 +905,7 @@ div.loading-monitoring {
 }
 
 #graphBar{
-    margin-top: 10px;
+    margin-top: 30px;
     margin-bottom: 10px;
     min-height: 50px;
     border:1px solid #ccc;
